<li>2-loop tadpole pieces now included in fine-tuning calculation: thanks to R Ruiz de Austri
<li>Matching scale of QEDxQCD(5) to MSSM is now variable: it's set by the scale you run oneset up to before calling fixedOrderIteration. Used to be MZ: current default is <b>mtop(phys)</b>.
<li>Added 2-loop SM contributions to electroweak threshold corrections in private communication from authors of 1411.7040