@@ -1412,7 +1412,8 @@ simulation.
 This work has been partially supported by STFC consolidated grant 
 ST/L000385/1. We thank the Cambridge SUSY working group for helpful
 discussions and to F Staub for helpful communications regarding
-\code{SARAH}~and \code{sPHENO}.
+\code{SARAH}~and \code{sPHENO}. We thank J Kersten for the helpful reporting
+of bugs. 
 
 \appendix
 
