@@ -1,3 +1,4 @@
+DEBUG: 
 # SOFTSUSY4.1.1 SLHA compliant output
 # B.C. Allanach, Comput. Phys. Commun. 143 (2002) 305-331, hep-ph/0104145
 Block SPINFO          # Program information
@@ -341,3 +342,4 @@ Block msoft Q= 8.86650083e+02 # MSSM DRbar SUSY breaking parameters
      3     1.11733227e+03     # M_3(Q)
     21     1.09526905e+05     # mH1^2(Q)
     22    -3.54641844e+05     # mH2^2(Q)
+DEBUG: 
